[package]
name = "alloy-signer-turnkey"
version = "0.1.0"
edition = "2021"
description = "Turnkey-based signer implementation for Alloy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendanryan/alloy-signer-turnkey"
keywords = ["ethereum", "crypto", "signer", "turnkey", "alloy"]
categories = ["cryptography", "web-programming"]

[dependencies]
# Alloy ecosystem
alloy-signer = "1.0"
alloy-primitives = "1.0"
alloy-consensus = "1.0"
alloy-sol-types = "1.0"
alloy-contract = "1.0"
alloy-provider = "1.0"
alloy-network = "1.0"
alloy-rpc-types-eth = "1.0"

# Official Turnkey SDK
turnkey_client = { git = "https://github.com/tkhq/rust-sdk.git", package = "turnkey_client" }

# Async trait for cleaner async implementations
async-trait = "0.1"

# HTTP client and async
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
eyre = "0.6"

# Crypto utilities
hex = "0.4"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
serde_json = "1.0"
