[package]
name = "alloy-signer-turnkey"
version = "0.1.2"
edition = "2021"
description = "Turnkey-based signer implementation for Alloy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brendanryan/alloy-signer-turnkey"
keywords = ["ethereum", "crypto", "signer", "turnkey", "alloy"]
categories = ["cryptography", "web-programming"]

[dependencies]
# Alloy ecosystem
alloy-signer = "1.2"
alloy-primitives = "1.4"

# Official Turnkey SDK
turnkey_client = "0.5"

# Async
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Utilities
hex = "0.4"

[dev-dependencies]
# Testing
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
mockito = "1.5"
serde_json = "1.0"

# Examples
alloy-sol-types = "1.5"
alloy-provider = "1.2"
alloy-rpc-types-eth = "1.2"
alloy-contract = "1.2"
dotenvy = "0.15"
